--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -22,25 +22,25 @@
 
     <TextView
         style="@style/TextAppearance.AppCompat.Large"
-        android:id="@+id/temperature"
+        android:id="@+id/temperature_txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
     <TextView
         style="@style/TextAppearance.AppCompat.Large"
-        android:id="@+id/pressure"
+        android:id="@+id/pressure_txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
     <TextView
         style="@style/TextAppearance.AppCompat.Large"
-        android:id="@+id/humidity"
+        android:id="@+id/humidity_txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
     <TextView
         style="@style/TextAppearance.AppCompat.Medium"
-        android:id="@+id/wind"
+        android:id="@+id/wind_txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
